--- a/Python01.ipynb
+++ b/Python01.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Python01.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOdxs6a3WIfUvb7IDjSAJLF",
+      "authorship_tag": "ABX9TyMJoa9+gaPoafg5Pxp15pBJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -404,6 +404,11 @@
         "1.   ใช้ตัวเลขกับตัวหนังสือสลับกันได้ แต่ห้ามขึ้นต้นด้วยตัวเลข\n",
         "2.   ห้ามมีเว้นวรรคในชื่อตัวแปร\n",
         "\n",
+        "1.   ตัวใหญ่กับตัวเล็กมีผล\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         "\n",
         "\n"
       ],
@@ -559,12 +564,160 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## ชนิดของตัวแปร"
+      ],
+      "metadata": {
+        "id": "g-VkoDipULhm"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### char(acter)(ตัวอักษร)"
+      ],
+      "metadata": {
+        "id": "iqVRtnLDVDPW"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = 'Ch'"
+      ],
+      "metadata": {
+        "id": "MmPeetEQSNjn"
+      },
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b = 'aracter'"
+      ],
+      "metadata": {
+        "id": "dDB5BC5RVkIs"
+      },
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f'a={a} b={b}, then  {a+b} = {a+b} ')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OjXyjPvXVpPR",
+        "outputId": "f78bc650-6921-4421-c0bb-34d4a5ca8548"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a=Ch b=arcter, then  Charcter = Charcter \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A = 'c'\n",
+        "B= 'a'"
+      ],
+      "metadata": {
+        "id": "uqGGWhLAXq1n"
+      },
+      "execution_count": 28,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(A + B)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "m7DqCIjtXvgU",
+        "outputId": "524a01c4-0651-455f-9ca7-8e080c6b4523"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ca\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### int(eger)(จำนวนเต็ม)"
+      ],
+      "metadata": {
+        "id": "Bk3hae-gX9uY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "int_a = 7\n",
+        "int_b = 2"
+      ],
+      "metadata": {
+        "id": "leD0KHcvaWVc"
+      },
+      "execution_count": 36,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "int_c = int_a + int_b\n",
+        "print(int_c)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 184
+        },
+        "id": "IKg4TJvvYQ8c",
+        "outputId": "4d315a7e-92f7-48ba-9a7e-72eabbea0a0e"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-37-6a039528a664>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mint_c\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint_a\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mint_b\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mint_c\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: 'int' object is not callable"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [
         ""
       ],
       "metadata": {
-        "id": "MmPeetEQSNjn"
+        "id": "XXp2Ui8laMKc"
       },
       "execution_count": null,
       "outputs": []
