--- a/Data_Structure.ipynb
+++ b/Data_Structure.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Data Structure.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNqBikJLVujQtI+YLdyCTx2",
+      "authorship_tag": "ABX9TyNnn/VNVa4AyI7GQ2v4DxrU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1217,25 +1217,25 @@
     {
       "cell_type": "code",
       "source": [
-        "#01:02:03\n",
-        "\n",
-        "a = (1*60*60) + (2*60) + 3\n",
-        "print(f'01:02:03 แปลงเป็นวินาที ได้ {a} วินาที')"
+        "h1 = '12:30:15'\n",
+        "h1_sp = h1.split(':')\n",
+        "ans1 = int(h1_sp[0])*3600 + int(h1_sp[1])*60 + int(h1_sp[2])\n",
+        "print(f'เวลา {h1} แปลงเป็นจำนวนวินาทีได้เท่ากับ {ans1} วินาที')"
       ],
       "metadata": {
+        "id": "Fx1DVqy1Jull",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "tM3xHrnOIcEE",
-        "outputId": "f367822d-b00b-4e2f-947a-a4c1ce36be35"
+        "outputId": "1ccff9f7-bad2-4e90-d9af-95b8d52f257b"
       },
-      "execution_count": 48,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "01:02:03 แปลงเป็นวินาที ได้ 3723 วินาที\n"
+            "เวลา 12:30:15 แปลงเป็นจำนวนวินาทีได้เท่ากับ 45015 วินาที\n"
           ]
         }
       ]
@@ -1243,24 +1243,106 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "h2 = '13:41:07'\n",
+        "h2_sp = h2.split(':')\n",
+        "ans2 = int(h2_sp[0])*3600 + int(h2_sp[1])*60 + int(h2_sp[2])\n",
+        "print(f'เวลา {h2} แปลงเป็นจำนวนวินาทีได้เท่ากับ {ans2} วินาที')"
       ],
       "metadata": {
-        "id": "Fx1DVqy1Jull"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1f-ugxGa9iAV",
+        "outputId": "91f5973b-62de-4043-e80d-01d15916d846"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "เวลา 13:41:07 แปลงเป็นจำนวนวินาทีได้เท่ากับ 49267 วินาที\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "h3 = '09:11:50'\n",
+        "h3_sp = h3.split(':')\n",
+        "ans3 = int(h3_sp[0])*3600 + int(h3_sp[1])*60 + int(h3_sp[2])\n",
+        "print(f'เวลา {h3} แปลงเป็นจำนวนวินาทีได้เท่ากับ {ans3} วินาที')"
       ],
       "metadata": {
-        "id": "1f-ugxGa9iAV"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6DT9SDUVFJq8",
+        "outputId": "0d417d1f-d998-403b-ce1c-962fe9c92f1a"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "เวลา 09:11:50 แปลงเป็นจำนวนวินาทีได้เท่ากับ 33110 วินาที\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "h4 = '21:30:15'\n",
+        "h4_sp = h4.split(':')\n",
+        "ans4 = int(h4_sp[0])*3600 + int(h4_sp[1])*60 + int(h4_sp[2])\n",
+        "print(f'เวลา {h4} แปลงเป็นจำนวนวินาทีได้เท่ากับ {ans4} วินาที')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NBxALWVzFMyr",
+        "outputId": "7bd60df1-a459-4e60-dd19-4112f8f581d6"
+      },
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "เวลา 21:30:15 แปลงเป็นจำนวนวินาทีได้เท่ากับ 77415 วินาที\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "h5 = '03:10:15'\n",
+        "h5_sp = h5.split(':')\n",
+        "ans5 = int(h5_sp[0])*3600 + int(h5_sp[1])*60 + int(h5_sp[2])\n",
+        "print(f'เวลา {h5} แปลงเป็นจำนวนวินาทีได้เท่ากับ {ans5} วินาที')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dztQUncXFPIn",
+        "outputId": "cc37d23d-0c77-47e2-dcb2-fffc9c926446"
+      },
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "เวลา 03:10:15 แปลงเป็นจำนวนวินาทีได้เท่ากับ 11415 วินาที\n"
+          ]
+        }
+      ]
     }
   ]
 }
