--- a/Data_Structure.ipynb
+++ b/Data_Structure.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Data Structure.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOOD78VbALXoVRKmhnuU76Z",
+      "authorship_tag": "ABX9TyO1+a5m6e+MKYPvkMd0pQzY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2654,41 +2654,75 @@
     {
       "cell_type": "code",
       "source": [
-        "HW3 = np.zeros((15,15))\n",
+        "HW3 = np.zeros((10,10))\n",
         "HW3"
       ],
       "metadata": {
         "id": "Ub6CAjg6HCo5",
-        "outputId": "4c1a9990-2137-4afe-dc80-b6e8c4f7599d",
+        "outputId": "fa42d92e-9a68-4f26-8ee4-53348c096414",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 105,
+      "execution_count": 107,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-              "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-              "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-              "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-              "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-              "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-              "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-              "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-              "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-              "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-              "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-              "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-              "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-              "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-              "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]])"
+              "array([[0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+              "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+              "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+              "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+              "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+              "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+              "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+              "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+              "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+              "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]])"
             ]
           },
           "metadata": {},
-          "execution_count": 105
+          "execution_count": 107
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "HW3[::4,2] = 1  #คอลัมน์ 2 ห่างกัน 4 แถว\n",
+        "HW3[::4,4] = 1  #คอลัมน์ 4 ห่างกัน 4 แถว\n",
+        "HW3[::4,6] = 1  #คอลัมน์ 6 ห่างกัน 4 แถว\n",
+        "HW3[::4,8] = 1  #คอลัมน์ 8 ห่างกัน 4 แถว\n",
+        "HW3"
+      ],
+      "metadata": {
+        "id": "dlx51Kei9gD8",
+        "outputId": "cf69d2a6-9084-4a00-9e51-4a8b0514b7d8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 108,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0., 0., 1., 0., 1., 0., 1., 0., 1., 0.],\n",
+              "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+              "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+              "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+              "       [0., 0., 1., 0., 1., 0., 1., 0., 1., 0.],\n",
+              "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+              "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+              "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+              "       [0., 0., 1., 0., 1., 0., 1., 0., 1., 0.],\n",
+              "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 108
         }
       ]
     },
@@ -2715,12 +2749,12 @@
       ],
       "metadata": {
         "id": "xxWUeo7nHMlB",
-        "outputId": "828673d4-86d2-416b-8ae0-70ffe26ba6e7",
+        "outputId": "eb26785d-a14a-4566-9580-aa284ae7f34d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 106,
+      "execution_count": 109,
       "outputs": [
         {
           "output_type": "stream",
@@ -2753,12 +2787,12 @@
       ],
       "metadata": {
         "id": "Zkkd51h3HZmy",
-        "outputId": "2eb0c9c9-0758-460f-94a6-ef3863d884f9",
+        "outputId": "f122f9c8-e8b1-4968-8cb1-9df2a889b66b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 103,
+      "execution_count": 110,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2770,7 +2804,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 103
+          "execution_count": 110
         }
       ]
     },
