--- a/Basic_Programming_Concepts.ipynb
+++ b/Basic_Programming_Concepts.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Basic Programming Concepts.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMfDccfKInPO/1QPrt870Gl",
+      "authorship_tag": "ABX9TyMzuvonhhb1mtNJSX411P7H",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -525,6 +525,299 @@
       "metadata": {
         "id": "qsKrUTzaDjen"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "```python\n",
+        "for member in listEx:\n",
+        "    do_something()\n",
+        "```"
+      ],
+      "metadata": {
+        "id": "VbogMkScS9u3"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for member in [1,2,3,4,5,6]:  #member ถูกแทนด้วยสมาชิกใน list\n",
+        "    print(member)"
+      ],
+      "metadata": {
+        "id": "xH-ukr_xS8Wb",
+        "outputId": "9443d51a-eb49-486a-b1bb-53fd2354b2b8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def print_name(name):\n",
+        "    print(f'ฉันชื่อ  {name}')"
+      ],
+      "metadata": {
+        "id": "9e2IXhK_UeKZ"
+      },
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for name in ['วัชราภรณ์','จุฑากาญจน์','ชลธิชา','ญาดา','กิตติคุณ']:\n",
+        "    N = name\n",
+        "    print_name(N)"
+      ],
+      "metadata": {
+        "id": "SvOzwJ50U0jp",
+        "outputId": "3d56cd3a-9e3a-4404-8a18-f74bda69a6cd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ฉันชื่อ  วัชราภรณ์\n",
+            "ฉันชื่อ  จุฑากาญจน์\n",
+            "ฉันชื่อ  ชลธิชา\n",
+            "ฉันชื่อ  ญาดา\n",
+            "ฉันชื่อ  กิตติคุณ\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list_name_id_grade = [['นางสาวเบญญาภา ระภูเขียว','623020527-6','B'],\n",
+        "                                 ['นางสาวทักษิณา ราชหุ่น','623021000-1','A'],\n",
+        "                                 ['นางสาวปลายฟ้า คำเพ็ง','623021005-4','C']]"
+      ],
+      "metadata": {
+        "id": "I0bgdkWuV_Jo"
+      },
+      "execution_count": 27,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for each in list_name_id_grade:\n",
+        "    name = each[0]\n",
+        "    id = each[1]\n",
+        "    grade = each[2]\n",
+        "    print_grade(name,id,grade)\n",
+        "    print('-------------------------')"
+      ],
+      "metadata": {
+        "id": "frwIvl8sXBRL",
+        "outputId": "5d148196-1c43-40c0-f424-13d01a572d80",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "รหัสประจำตัว 623020527-6 ชื่อ นางสาวเบญญาภา ระภูเขียว\n",
+            "ได้เกรด B\n",
+            "-------------------------\n",
+            "รหัสประจำตัว 623021000-1 ชื่อ นางสาวทักษิณา ราชหุ่น\n",
+            "ได้เกรด A\n",
+            "-------------------------\n",
+            "รหัสประจำตัว 623021005-4 ชื่อ นางสาวปลายฟ้า คำเพ็ง\n",
+            "ได้เกรด C\n",
+            "-------------------------\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## ใช้ for loop เพิ่มสมาชิกใน list"
+      ],
+      "metadata": {
+        "id": "BPvj00H0X96M"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list_name = [] #ตั้งชื่อ list ที่เป็น list ว่าง # เอา list มารับก่อน\n",
+        "list_id = []\n",
+        "list_grade = []  \n",
+        "for each in list_name_id_grade:\n",
+        "    list_name.append(each[0])\n",
+        "    list_id.append(each[1])\n",
+        "    list_grade.append(each[2])"
+      ],
+      "metadata": {
+        "id": "dimyhUjEYOYj"
+      },
+      "execution_count": 32,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list_name"
+      ],
+      "metadata": {
+        "id": "gHkcvlshZJ0U",
+        "outputId": "767b9bea-e192-4c33-eaa3-29da45184f7e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['นางสาวเบญญาภา ระภูเขียว', 'นางสาวทักษิณา ราชหุ่น', 'นางสาวปลายฟ้า คำเพ็ง']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### การวนลูป `range()`"
+      ],
+      "metadata": {
+        "id": "DCczxDWtbB4e"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(100): #สร้าง list ที่มีสมาชิก 100 ตัว\n",
+        "    print('งง', end = '  ')  "
+      ],
+      "metadata": {
+        "id": "OZ92-8PGbM46",
+        "outputId": "2483f11b-c8a0-4ff3-d001-31e70fed6e61",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  งง  "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Loop ซ้อน Loop"
+      ],
+      "metadata": {
+        "id": "JyVwMNgTb8K9"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for mem1 in range(2,5):  #[2,3,4]  #เป็นสูตรคูณแม่2 3 4\n",
+        "    print(f'now mem1 = {mem1}')\n",
+        "    for mem2 in range(1,13):  #[1,2,3,4,5,6,7,8,9,10,11,12]\n",
+        "         print(f'{mem1} x {mem2} = {mem1*mem2}')\n",
+        "    print(f'end inner for mem1 = {mem1}')"
+      ],
+      "metadata": {
+        "id": "AQS5FEPScNam",
+        "outputId": "5ccb8b3d-a3c7-4e3b-808b-78ca00afcffc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "now mem1 = 2\n",
+            "2 x 1 = 2\n",
+            "2 x 2 = 4\n",
+            "2 x 3 = 6\n",
+            "2 x 4 = 8\n",
+            "2 x 5 = 10\n",
+            "2 x 6 = 12\n",
+            "2 x 7 = 14\n",
+            "2 x 8 = 16\n",
+            "2 x 9 = 18\n",
+            "2 x 10 = 20\n",
+            "2 x 11 = 22\n",
+            "2 x 12 = 24\n",
+            "end inner for mem1 = 2\n",
+            "now mem1 = 3\n",
+            "3 x 1 = 3\n",
+            "3 x 2 = 6\n",
+            "3 x 3 = 9\n",
+            "3 x 4 = 12\n",
+            "3 x 5 = 15\n",
+            "3 x 6 = 18\n",
+            "3 x 7 = 21\n",
+            "3 x 8 = 24\n",
+            "3 x 9 = 27\n",
+            "3 x 10 = 30\n",
+            "3 x 11 = 33\n",
+            "3 x 12 = 36\n",
+            "end inner for mem1 = 3\n",
+            "now mem1 = 4\n",
+            "4 x 1 = 4\n",
+            "4 x 2 = 8\n",
+            "4 x 3 = 12\n",
+            "4 x 4 = 16\n",
+            "4 x 5 = 20\n",
+            "4 x 6 = 24\n",
+            "4 x 7 = 28\n",
+            "4 x 8 = 32\n",
+            "4 x 9 = 36\n",
+            "4 x 10 = 40\n",
+            "4 x 11 = 44\n",
+            "4 x 12 = 48\n",
+            "end inner for mem1 = 4\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
