--- a/Basic_Programming_Concepts.ipynb
+++ b/Basic_Programming_Concepts.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Basic Programming Concepts.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMzuvonhhb1mtNJSX411P7H",
+      "authorship_tag": "ABX9TyNUmWkkZ/NAH4k9f1333CKf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -545,11 +545,11 @@
         "    print(member)"
       ],
       "metadata": {
-        "id": "xH-ukr_xS8Wb",
-        "outputId": "9443d51a-eb49-486a-b1bb-53fd2354b2b8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "xH-ukr_xS8Wb",
+        "outputId": "9443d51a-eb49-486a-b1bb-53fd2354b2b8"
       },
       "execution_count": 22,
       "outputs": [
@@ -587,11 +587,11 @@
         "    print_name(N)"
       ],
       "metadata": {
-        "id": "SvOzwJ50U0jp",
-        "outputId": "3d56cd3a-9e3a-4404-8a18-f74bda69a6cd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "SvOzwJ50U0jp",
+        "outputId": "3d56cd3a-9e3a-4404-8a18-f74bda69a6cd"
       },
       "execution_count": 25,
       "outputs": [
@@ -632,11 +632,11 @@
         "    print('-------------------------')"
       ],
       "metadata": {
-        "id": "frwIvl8sXBRL",
-        "outputId": "5d148196-1c43-40c0-f424-13d01a572d80",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "frwIvl8sXBRL",
+        "outputId": "5d148196-1c43-40c0-f424-13d01a572d80"
       },
       "execution_count": 30,
       "outputs": [
@@ -689,11 +689,11 @@
         "list_name"
       ],
       "metadata": {
-        "id": "gHkcvlshZJ0U",
-        "outputId": "767b9bea-e192-4c33-eaa3-29da45184f7e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "gHkcvlshZJ0U",
+        "outputId": "767b9bea-e192-4c33-eaa3-29da45184f7e"
       },
       "execution_count": 33,
       "outputs": [
@@ -725,11 +725,11 @@
         "    print('งง', end = '  ')  "
       ],
       "metadata": {
-        "id": "OZ92-8PGbM46",
-        "outputId": "2483f11b-c8a0-4ff3-d001-31e70fed6e61",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "OZ92-8PGbM46",
+        "outputId": "2483f11b-c8a0-4ff3-d001-31e70fed6e61"
       },
       "execution_count": 36,
       "outputs": [
@@ -761,11 +761,11 @@
         "    print(f'end inner for mem1 = {mem1}')"
       ],
       "metadata": {
-        "id": "AQS5FEPScNam",
-        "outputId": "5ccb8b3d-a3c7-4e3b-808b-78ca00afcffc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "AQS5FEPScNam",
+        "outputId": "5ccb8b3d-a3c7-4e3b-808b-78ca00afcffc"
       },
       "execution_count": 39,
       "outputs": [
@@ -822,6 +822,53 @@
     {
       "cell_type": "markdown",
       "source": [
+        "### Loop in Function"
+      ],
+      "metadata": {
+        "id": "ulYq_5l6fsnG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def print_grade_loop(names,grades):\n",
+        "     for n,g in zip(names,grades):  #function zip จับ list มารวมกัน\n",
+        "         print(f'{n} ได้เกรด {g}')"
+      ],
+      "metadata": {
+        "id": "i2R02QqVfxXO"
+      },
+      "execution_count": 40,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print_grade_loop(list_name,list_grade)"
+      ],
+      "metadata": {
+        "id": "lsZrgjw0gd0t",
+        "outputId": "29104290-4f08-4455-a9c0-734f4a9f9439",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "นางสาวเบญญาภา ระภูเขียว ได้เกรด B\n",
+            "นางสาวทักษิณา ราชหุ่น ได้เกรด A\n",
+            "นางสาวปลายฟ้า คำเพ็ง ได้เกรด C\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# Conditional Statement (if)"
       ],
       "metadata": {
@@ -829,15 +876,203 @@
       }
     },
     {
-      "cell_type": "code",
-      "execution_count": 16,
+      "cell_type": "markdown",
+      "source": [
+        "```python\n",
+        "if condition1:\n",
+        "    do_something()  ## ถ้า condition1 เป็นจริง ทำ do_something()\n",
+        "elif condition2:\n",
+        "    do_another_thing()  ## ถ้า condition1 ไม่เป็นจริงแต่ condition 2 เป็นจริง ทำ do_another_thing()\n",
+        "else:\n",
+        "    do_thelast_thing()  #ถ้าไม่มี condition ไหนเป็นจริงเลย ทำ do_thelast_thing()\n",
+        "```"
+      ],
       "metadata": {
-        "id": "1iA_qomUDXui"
+        "id": "COJlZLtMhlHF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 44,
+      "metadata": {
+        "id": "1iA_qomUDXui",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "fbaec499-660c-4758-e196-cc813fafcd20"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "นางสาวเบญญาภา ระภูเขียว ได้เกรด A\n",
+            "นางสาวทักษิณา ราชหุ่น ได้เกรด A\n",
+            "นางสาวปลายฟ้า คำเพ็ง ได้เกรด F\n"
+          ]
+        }
+      ],
+      "source": [
+        "for n in list_name:\n",
+        "    if len(n)>20:  #ชื่อมีความยาวเกิน 20 ตัว เกรด A\n",
+        "       print(f'{n} ได้เกรด A')\n",
+        "    else:\n",
+        "        print(f'{n} ได้เกรด F')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### operator ที่ใช้ตรวจสอบ condition\n",
+        "\n",
+        "==,!=,>=.<=,<,>,and,or"
+      ],
+      "metadata": {
+        "id": "-4xfoGHZj7Al"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = 10 == 20\n",
+        "print(a)"
+      ],
+      "metadata": {
+        "id": "HuRxfUoxjyix",
+        "outputId": "95901e86-3ac8-40a2-c616-4c1dfdc41c9b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b = 15 <= 20\n",
+        "print(b)"
+      ],
+      "metadata": {
+        "id": "HEeh-q0qkNBK",
+        "outputId": "4088e034-1b96-4e46-f09d-0a2d6f45fbf3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if a:  #ไม่ print เพราะ A เป็น False\n",
+        "    print('x')"
+      ],
+      "metadata": {
+        "id": "StE5C80UkbtJ"
+      },
+      "execution_count": 48,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if True:\n",
+        "    print('x')"
+      ],
+      "metadata": {
+        "id": "IYAVLdM7kjEx",
+        "outputId": "7c450a87-f391-4369-8e98-7aad351aa0f3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if a and b:\n",
+        "    print('x')"
+      ],
+      "metadata": {
+        "id": "LKkUOQ9pk49k"
+      },
+      "execution_count": 52,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if a or b:\n",
+        "    print('x')"
+      ],
+      "metadata": {
+        "id": "9JCbY_xMk9uh",
+        "outputId": "32862a74-9177-4587-b29d-f5a4dae6cd7e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## HW\n",
+        "เขียน function ตัดเกรด โดยที่ input เป็นคะแนน (0-100) , output เป็นเกรด (F-A) หรือ ไม่สามารถตัดเกรดได้\n",
+        "\n",
+        "วนลูปตัดเกรด input = [1,50,65,90,101,-5,49, 'ก' ,80]"
+      ],
+      "metadata": {
+        "id": "4ujvagwBlUeS"
+      }
+    },
+    {
+      "cell_type": "code",
       "source": [
         ""
-      ]
+      ],
+      "metadata": {
+        "id": "ZsmFY6S7lGZR"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
